# IOTBBB

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/distance/: CMakeLists.txt  distance.cpp  example_simple.cpp
examples/doorAlarm/: CMakeLists.txt  doorAlarm.cpp
examples/doorAlarm2/: CMakeLists.txt  doorAlarm2.cpp
examples/multi_touch/: CMakeLists.txt  example_callback.c
examples/oled_128x64/: CMakeLists.txt  bricklet_oled_128x64.h  example_hello_world.cpp
examples/piezo_speaker/: CMakeLists.txt  example_morse_code.c
multi_touch/: bricklet_multi_touch.c  bricklet_multi_touch.h
oled_128x64/: bricklet_oled_128x64.c
piezo_speaker/: CMakeLists.txt  bricklet_piezo_speaker.h
src/: CMakeLists.txt  bricklet_piezo_speaker.cpp
